@@ -9,3 +9,4 @@
 
 .ep_only_js { display: none; }
 
+.ep_only_js_inline { display: none; }
